{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 32,
  "lineage": "c38834e0-9a51-9ffd-83c5-667dd3ab6fbc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instancia_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].espana",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b82f42fb843262b7",
            "arn": "arn:aws:ec2:eu-south-2:390403867561:instance/i-0d5623444c7ac3c4a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d5623444c7ac3c4a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "PublicKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c118113775bb8252",
            "private_dns": "ip-172-22-20-13.eu-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.22.20.13",
            "public_ip": "18.101.182.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c243653c53ddbd6a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000912061e256a6a6",
            "tags": {
              "Name": "InstanciaPublica",
              "entorno": "terraform"
            },
            "tags_all": {
              "Name": "InstanciaPublica",
              "entorno": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d27f570453f1a336"
            ]
          },
          "dependencies": [
            "aws_key_pair.clave_publica",
            "aws_security_group.sg_espana",
            "aws_subnet.subnet_publica",
            "aws_vpc.mi_vpc",
            "data.aws_ami.ami_instancias"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].espana",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:390403867561:internet-gateway/igw-0631088b165ee2551",
            "id": "igw-0631088b165ee2551",
            "owner_id": "390403867561",
            "tags": {
              "Name": "IGEspana",
              "entorno": "terraform"
            },
            "tags_all": {
              "Name": "IGEspana",
              "entorno": "terraform"
            },
            "vpc_id": "vpc-046aafa29c4aa355d"
          },
          "dependencies": [
            "aws_vpc.mi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rutas_subnet_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].espana",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:390403867561:route-table/rtb-0ab2c75a3b0a3e927",
            "id": "rtb-0ab2c75a3b0a3e927",
            "owner_id": "390403867561",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0631088b165ee2551",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Publica",
              "entorno": "terraform"
            },
            "tags_all": {
              "Name": "Publica",
              "entorno": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-046aafa29c4aa355d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_subnet.subnet_publica",
            "aws_vpc.mi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asociacion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].espana",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc82c3b41c51210e",
            "route_table_id": "rtb-0ab2c75a3b0a3e927",
            "subnet_id": "subnet-000912061e256a6a6"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_route_table.rutas_subnet_pub",
            "aws_subnet.subnet_publica",
            "aws_vpc.mi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_espana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].espana",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:390403867561:security-group/sg-0d27f570453f1a336",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d27f570453f1a336",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241205075742847600000002",
            "name_prefix": "terraform-",
            "owner_id": "390403867561",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_Espana",
              "entorno": "terraform"
            },
            "tags_all": {
              "Name": "SG_Espana",
              "entorno": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-046aafa29c4aa355d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].espana",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:390403867561:subnet/subnet-0160992053ab3196c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2b",
            "availability_zone_id": "eus2-az2",
            "cidr_block": "172.22.20.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0160992053ab3196c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403867561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetPrivada",
              "entorno": "terraform",
              "tipo": "privada"
            },
            "tags_all": {
              "Name": "SubnetPrivada",
              "entorno": "terraform",
              "tipo": "privada"
            },
            "vpc_id": "vpc-046aafa29c4aa355d"
          },
          "dependencies": [
            "aws_vpc.mi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].espana",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:390403867561:subnet/subnet-000912061e256a6a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2a",
            "availability_zone_id": "eus2-az1",
            "cidr_block": "172.22.20.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000912061e256a6a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390403867561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetPublica",
              "entorno": "terraform",
              "tipo": "publica"
            },
            "tags_all": {
              "Name": "SubnetPublica",
              "entorno": "terraform",
              "tipo": "publica"
            },
            "vpc_id": "vpc-046aafa29c4aa355d"
          },
          "dependencies": [
            "aws_vpc.mi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mi_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].espana",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:390403867561:vpc/vpc-046aafa29c4aa355d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.22.20.0/26",
            "default_network_acl_id": "acl-0f085cee40581187d",
            "default_route_table_id": "rtb-0881635cdb96d19dc",
            "default_security_group_id": "sg-0c6901c9f186f5e60",
            "dhcp_options_id": "dopt-09f2fdb960ab28067",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-046aafa29c4aa355d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0881635cdb96d19dc",
            "owner_id": "390403867561",
            "tags": {
              "Name": "VPC-Espana",
              "entorno": "terraform"
            },
            "tags_all": {
              "Name": "VPC-Espana",
              "entorno": "terraform"
            }
          }
        }
      ]
    }
  ]
}